correlation estimation, spectral density estimation, spectral power

--- a/common/operator.tex
+++ b/common/operator.tex
@@ -238,9 +238,9 @@ Let $\spX\eqd\linearspaceX$ and $\spY\eqd\linearspaceY$ be linear spaces.\\
     \indxs{\clOxy}
     \index{operator!linear}
     \begin{array}{>{\scy\qquad}r rcl @{\qquad}C @{\qquad}D@{\qquad}D}
-      \mc{7}{M}{An operator $\opL\in\clOxy$ is \hid{linear} if}
+      \mc{7}{M}{An operator $\opL\in\clOxy$ is \propd{linear} if}
         \\1. & \opL(\vx + \vy)    &=&  \opL \vx + \opL \vy & \forall \vx,\vy\in\spX  & (\prope{additive}) & and
-        \\2. & \opL(\alpha \vx) &=&  \alpha\opL \vx    & \forall \vx\in\spX,\quad \forall\alpha\in\F & (\prope{homogeneous}).
+        \\2. & \opL(\alpha \vx)   &=&  \alpha\opL \vx      & \forall \vx\in\spX,\quad \forall\alpha\in\F & (\prope{homogeneous}).
     \\\mc{7}{M}{The set of all linear operators from $\spX$ to $\spY$ is denoted $\clLxy$ such that}
     \\\mc{7}{l}{\qquad\clLxy \eqd \set{\opL\in\clOxy}{\text{$\opL$ is linear}}}.
     \end{array}
@@ -453,7 +453,7 @@ Let $\oppN(\opL)$ be the \structe{null space} of a linear operator $\opL\in\clLx
 %---------------------------------------
 Let $\spW$, $\spX$, $\spY$, and $\spZ$ be linear spaces over a field $\F$.
 \thmbox{\begin{array}{>{\scy}rlcl@{\qquad}C@{\qquad}D}
-    1. & \opL\brp{\opM\opN}      &=& \brp{\opL\opM}\opN                          & \forall \opL\in\clLzw,\, \opM\in\clLyz,\, \opN\in\clLxy         & (\prope{associative})
+    1. & \opL\brp{\opM\opN}      &=& \brp{\opL\opM}\opN                          & \forall \opL\in\clLzw,\, \opM\in\clLyz,\, \opN\in\clLxy  & (\prope{associative})
   \\2. & \opL\brp{\opM\addo\opN} &=& \brp{\opL\opM}\addo\brp{\opL\opN}           & \forall \opL\in\clLyz,\, \opM\in\clLxy,\, \opN\in\clLxy  & (\prope{left distributive})
   \\3. & \brp{\opL\addo\opM}\opN &=& \brp{\opL\opN}\addo\brp{\opM\opN}           & \forall \opL\in\clLyz,\, \opM\in\clLyz,\, \opN\in\clLxy  & (\prope{right distributive})
   \\4. & \alpha\brp{\opL\opM}    &=& \brp{\alpha\opL}\opM = \opL\brp{\alpha\opM} & \forall \opL\in\clLyz,\, \opM\in\clLxy,\, \alpha\in\F    & (\prope{homogeneous})
