--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1125,9 +1125,13 @@
 \newcommand{\FG}    [0]{{\ft{G}}}
 \newcommand{\FH}    [0]{{\ft{H}}}
 \newcommand{\FW}    [0]{{\ft{W}}}
+\newcommand{\FU}    [0]{{\ft{U}}}
+\newcommand{\FV}    [0]{{\ft{V}}}
+\newcommand{\FP}    [0]{{\ft{P}}}
 \newcommand{\FQ}    [0]{{\ft{Q}}}
 \newcommand{\FR}    [0]{{\ft{R}}}
 \newcommand{\FS}    [0]{{\ft{S}}}
+\newcommand{\FX}    [0]{{\ft{X}}}
 \newcommand{\FY}    [0]{{\ft{Y}}}
 
 \newcommand{\sym}   [0]{\mathup{\lambda}}
@@ -1648,6 +1652,10 @@
 \newcommand{\Rxx}    [1][xx] {\mathfnct{R}_{\mathsfup{#1}}}  % Autocorrelation function
 \newcommand{\Sxx}    [1][xx] {\mathfnct{S}_{\mathsfup{#1}}}  % spectral density
 
+\newcommand{\estRxx} {\hat{\mathfnct{R}}_{\mathsfup{xx}}}
+\newcommand{\estRyy} {\hat{\mathfnct{R}}_{\mathsfup{yy}}}
+\newcommand{\estRxy} {\hat{\mathfnct{R}}_{\mathsfup{xy}}}
+\newcommand{\estRyx} {\hat{\mathfnct{R}}_{\mathsfup{yx}}}
 
 \newcommand{\Sw}   [1]{\tilde{\mathfnct{S}}_{\mathsfup{#1}}}  % spectral density
 \newcommand{\Swxx}   [1][xx] {\tilde{\mathfnct{S}}_{\mathsfup{#1}}}  % spectral density
