--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -1193,7 +1193,7 @@ Let $p\eqd \kappa$.
   {The legendary Hungarian mathematician John von Neumann once referred to the the theory
   of nonequilibrium systems as the ``theory of non-elephants," \ldots
   Nevertheless, such a theory of non-elephants will be attempted here.}
-  \footnotetext{\citerpg{bak2013}{29}{1475754264}{{\textsection} Systems in Balance Are Not Complex}}
+  \footnotetext{\citerpgc{bak2013}{29}{1475754264}{{\textsection} Systems in Balance Are Not Complex}}
 
 \begin{figure}[h]
   \centering
@@ -1757,16 +1757,16 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise_LTI}.
 \label{lem:estHk_Suu}
 %---------------------------------------
 Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise_LTI}.
-\lembox{
-  \brb{\begin{array}{FMD}
-          & There exists $\kappa(\omega)$ such that     &
-        \\& $\Swvv(\omega)=\kappa(\omega)\Swuu(\omega)$ &
-  \end{array}}
-  \implies
+\lemboxt{
+  $\brb{\begin{array}{M}
+           There exists $\kappa(\omega)$ such that    
+         $\Swvv(\omega)=\kappa(\omega)\Swuu(\omega)$ 
+  \end{array}}$
+  \\\indentx$\implies
   \brb{\begin{array}{>{\ds}rc>{\ds}l}
     \Swuu(\omega) = \frac{\abs{\estH(\omega)}^2\Swxx(\omega) - \estH(\omega)\Swxy(\omega) - \estH^\ast(\omega)\Swxy^\ast(\omega) + \Swyy(\omega)}
                          {\kappa(\omega)+\abs{\estH(\omega)}^2}
-  \end{array}}
+  \end{array}}$
   }
 \end{lemma}
 \begin{proof}
@@ -1800,12 +1800,18 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise_LTI}.
 
   \item Development of Wicks and Vold (\citeP{wicks1986}):
     \begin{align*}
-      Y-V &= Q = P = H(X-U)
-      \\HU-V &= HX-Y
-      \\\pE\brp{\brs{HU-V}\brs{HU-V}^\ast} &= \pE\brp{\brs{HX-Y}\brs{HX-Y}^\ast}
-      \\
-      \\\implies \abs{\estH}^2\Swuu - \estH\cancelto{}{\Swuv} - \estH^\ast\cancelto{}{\Swvu} + \Swvv
+      \FY-\FV &= \FQ = \estH\FP = \estH (\FX-\FU)
+        && \text{by definition of $\estH$}
+      \\\estH \FU-\FV &= \estH \FX-\FY
+        && \text{by \prope{left distributive} property of \ope{linear operator}s}
+        && \text{\xref{thm:L_LMN}}
+      \\\pE\brp{\brs{\estH\FU-\FV}\brs{\estH\FU-\FV}^\ast} &= \pE\brp{\brs{\estH \FX-\FY}\brs{\estH \FX-\FY}^\ast}
+      \\\abs{\estH}^2\Swuu - \estH\cancelto{0}{\Swuv} - \estH^\ast\cancelto{0}{\Swvu} + \Swvv
         &= \abs{\estH}^2\Swxx - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swyy
+        && \text{because $\rvu$ and $\rvv$ are \prope{uncorrelated}}
+      \\\abs{\estH}^2\Swuu + \kappa\Swuu
+        &= \abs{\estH}^2\Swxx - \estH\Swxy - \estH^\ast\Swxy^\ast + \Swyy
+        && \text{by hypothesis}
     \end{align*}
 \end{enumerate}
 \end{proof}
@@ -1879,7 +1885,7 @@ Let $\estHkp(\omega)$ be the transfer function estimate defined in \prefpp{def:H
       \\&= \boxed{\estH_I\Swxx \fG + \fG\Imag\Swxy - \estH_I\fF}
     \end{align*}
 
-  \item
+  \item Solve for $\estH$ \ldots
     \begin{align*}
       0
         &= 0 + i0
