--- a/common/info.tex
+++ b/common/info.tex
@@ -32,7 +32,7 @@
   \put(- 50,  00 ){\framebox( 100,100){} }
   \put(- 50,  10 ){\makebox( 100,80)[t]{channel} }
   \put(- 50,  10 ){\makebox( 100,80)[ ]{coder} }
-  \put(- 50,  10 ){\makebox( 100,80)[b]{$(L,N)$} }
+  \put(- 50,  10 ){\makebox( 100,80)[b]{$\opair{L}{N}$} }
   \put( 100,  00 ){\framebox( 100,100){modulator} }
   \put( 200,  50 ){\vector(1,0){100} }
 
@@ -86,7 +86,7 @@ will be much larger.
 
 %--------------------------------------
 \begin{definition}
-\citetbl{
+\footnote{
   \citerp{cover}{18}
   }
 \label{def:kld}
@@ -200,6 +200,7 @@ contained in the ordered pair $(\rvX,\rvY)$.
 \begin{center}\begin{footnotesize}
 \setlength{\unitlength}{0.4mm}
 \begin{picture}(150,180)(0,0)
+  \thicklines
   {\color[rgb]{0,0,1}
   \put(  50,  50){\oval(100,100)}
   \put(  50, 105){\makebox(0,0)[b]{$\iH(\rvX)$}}
@@ -360,7 +361,7 @@ contained in the ordered pair $(\rvX,\rvY)$.
 %=======================================
 %---------------------------------------
 \begin{theorem}
-\citetbl{
+\footnote{
   \citerp{cover}{26}
   }
 %---------------------------------------
@@ -391,7 +392,7 @@ contained in the ordered pair $(\rvX,\rvY)$.
 \begin{definition}
 \label{def:iC}
 %--------------------------------------
-Let $(L,N)$ be a block coder with $N$ output bits for each $L$ input bits.
+Let $\opair{L}{N}$ be a block coder with $\xN$ output bits for each $L$ input bits.
 \[
 \begin{array}{rcll}
   R   &\eqd& \frac{L}{N}    & \mbox{coding rate}      \\
@@ -402,37 +403,31 @@ Let $(L,N)$ be a block coder with $N$ output bits for each $L$ input bits.
 \end{definition}
 
 %--------------------------------------
-\begin{theorem}[noisy channel coding theorem]
-\citetbl{
+\begin{theorem}[\thmd{noisy channel coding theorem}]
+\footnote{
   \citerp{gallager}{143}
   }
 \label{thm:ncct}
-\index{Noisy channel coding theorem}
-\index{theorems!Noisy channel coding theorem}
 %--------------------------------------
-If
-\formbox{ R < \iC}
+\thmboxp{
+If $ R < \iC$
 then it is possible to construct an encoder and decoder such that 
 the probability of error $P_e$ is arbitrarily small. Specifically
-\formbox{ P_e \le e^{-N\iE(R)}  }
-
+\\\indentx$P_e \le e^{-N\iE(R)}$
+\\
 For $0\le R\ge\iC$, the function $\iE(R)$ is
-\begin{enume}
-  \item positive
-  \item decreasing
-  \item convex
-\end{enume}
+\prope{positive},
+\prope{decreasing}, and
+\prope{convex}.
+}
 \end{theorem}
-
-
-
-
 
 \begin{figure}[ht]
 \color{figcolor}
 \setlength{\unitlength}{0.2mm}
 \begin{center}
 \begin{picture}(200,100)(-50,0)
+  \thicklines
   \put(  0,  0){\line(1, 0){120}}
   \put(  0,  0){\line(0, 1){120}}
   %\put(125,  0){\makebox(0,0)[l]{$e$}}
@@ -457,6 +452,7 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
 \begin{center}
 \begin{tabular}{cccc}
 \begin{picture}(200,100)(-50,0)
+  \thicklines
   \put(  0,100){\vector(1, 0){100}}
   \put(  0,  0){\vector(1, 0){100}}
   \put(  0,100){\vector(1,-1){100}}
@@ -474,6 +470,7 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
 \end{picture}
 &
 \begin{picture}(200,100)(-50,0)
+  \thicklines
   \put(  0,  0){\line(1, 0){120}}
   \put(  0,  0){\line(0, 1){120}}
   \put(125,  0){\makebox(0,0)[l]{$p$}}
@@ -487,6 +484,7 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
 \end{picture}
 &
 \begin{picture}(200,100)(-50,0)
+  \thicklines
   \put(  0,  0){\line(1, 0){120}}
   \put(  0,  0){\line(0, 1){120}}
   \put(125,  0){\makebox(0,0)[l]{$e$}}
@@ -500,6 +498,7 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
 \end{picture}
 &
 \begin{picture}(200,100)(-50,0)
+  \thicklines
   \put(  0,  0){\line(1, 0){120}}
   \put(  0,  0){\line(0, 1){120}}
   \put(125,  0){\makebox(0,0)[l]{$\epsilon$}}
@@ -518,6 +517,283 @@ For $0\le R\ge\iC$, the function $\iE(R)$ is
   \label{fig:bsc}
   }
 \end{figure}
+
+
+%=======================================
+%\section{Channel Capacity}
+%=======================================
+\begin{figure}[ht]
+\color{figcolor}
+\begin{center}
+\begin{fsK}
+\setlength{\unitlength}{0.17mm}
+\begin{picture}(900,200)(-100,-50)
+  \thicklines
+  %\graphpaper[10](0,0)(700,100)
+  \put(-100, 125 ){\vector(0,-1){40}}
+  \put(-100, 130 ){\makebox(0,0)[bl]{$R_d$ (data rate)}}
+  \put(-100,  60 ){\makebox(30,0)[br]{$\{u_n\}$} }
+  \put(-100,  50 ){\vector(1,0){50} }
+
+  \put(-70, -50 ){\dashbox{4}( 280,160){} }
+  \put(-70, -40 ){\makebox( 280,160)[b]{transmitter} }
+  \put(   50, 130 ){\makebox(0,0)[bl]{$R_c$ (signal rate)}}
+  \put(   75, 125 ){\vector(0,-1){40}}
+  \put(   50,  60 ){\makebox(50,50)[b]{$\{y_n\}$} }
+  \put(   50,  50 ){\vector(1,0){50} }
+
+  \put(- 50,  00 ){\framebox( 100,100){} }
+  \put(- 50,  10 ){\makebox( 100,80)[t]{channel} }
+  \put(- 50,  10 ){\makebox( 100,80)[ ]{coder} }
+  \put(- 50,  10 ){\makebox( 100,80)[b]{$\opair{L}{N}$} }
+  \put( 100,  00 ){\framebox( 100,100){modulator} }
+  \put( 200,  50 ){\vector(1,0){100} }
+
+  \put( 350, 125 ){\vector(0,-1){25}}
+  \put( 300, 130 ){\makebox(0,0)[bl]{$\frac{L}{\xN}=\frac{R_d}{R_c}\eqd R<C$ (channel capacity)}}
+  \put( 300,  00 ){\framebox( 100,100){} }
+  \put( 300,  30 ){\makebox( 100, 40)[t]{channel} }
+  \put( 300,  10 ){\makebox( 100, 40)[b]{$\pp(Y|X)$} }
+  \put( 210,  60 ){\makebox( 90, 50)[b]{$\fs(t)$} }
+  \put( 400,  60 ){\makebox( 80, 50)[b]{$\fr(t)$} }
+
+  \put( 400,  50 ){\vector(1,0){100} }
+  \put( 500,  00 ){\framebox(100,100){demodulator} }
+  \put( 600,  60 ){\makebox(50,50)[b]{$\{\hat{y}_n\}$} }
+  \put( 600,  50 ){\vector(1,0){50}}
+  \put( 650,  00 ){\framebox(100,100){} }
+  \put( 650,  30 ){\makebox(100,40)[t]{channel} }
+  \put( 650,  30 ){\makebox(100,40)[b]{decoder} }
+  \put( 480, -50 ){\dashbox{4}( 280,160){} }
+  \put( 480, -40 ){\makebox( 280,160)[b]{receiver} }
+
+  \put( 760,  60 ){\makebox(40,50)[b]{$\{\ue_n\}$} }
+  \put( 750,  50 ){\vector(1,0){50}}
+\end{picture}
+\end{fsK}
+\end{center}
+\caption{
+   Memoryless modulation system model
+   %\label{fig:i_mod_model}
+   }
+\end{figure}
+
+
+
+
+
+
+\begin{figure}[ht] \color{figcolor}
+\begin{center}
+\begin{fsL}
+\setlength{\unitlength}{0.20mm}
+\begin{picture}(700,150)(-100,0)
+  \thicklines
+  %\graphpaper[10](0,0)(500,100)
+  \put(-100 ,  60 ){\makebox( 100,0)[b]{$\su$} }
+  \put(-100 ,  50 ){\vector(1,0){100} }
+
+  \put(  00 ,  10 ){\makebox( 100, 80)[t]{transmit} }
+  \put(  00 ,  10 ){\makebox( 100, 80)[c]{operation} }
+  \put(  00 ,  10 ){\makebox( 100, 80)[b]{$\opT$} }
+  \put(  00 ,  00 ){\framebox( 100,100){} }
+
+  \put( 100 ,  60 ){\makebox( 100,0)[b]{$X$} }
+  \put( 100 ,  50 ){\vector(1,0){140} }
+
+
+  \put( 200 ,  00 ){\makebox(100, 95)[t]{$Z$} }
+  \put( 260,   50 ){\line  (1,0){ 45} }
+  \put( 250 ,  80 ){\vector(0,-1){20} }
+  \put( 250,   50) {\circle{20}                   }
+  \put( 200 ,  00 ){\dashbox(100,100){$+$} }
+  \put( 200 ,  10 ){\makebox(100, 90)[b]{channel $\opC$} }
+
+  %\put( 200 ,  10 ){\makebox( 100, 80)[t]{channel} }
+  %\put( 200 ,  10 ){\makebox( 100, 80)[c]{operation} }
+  %\put( 200 ,  10 ){\makebox( 100, 80)[b]{\opC} }
+  %\put( 200 ,  00 ){\framebox(100,100){} }
+
+  \put( 300 ,  60 ){\makebox( 100,0)[b]{$Y$} }
+  \put( 300 ,  50 ){\vector(1,0){100} }
+
+  \put( 400 ,  00 ){\framebox(100,100){} }
+  \put( 400 ,  10 ){\makebox( 100, 80)[t]{receive} }
+  \put( 400 ,  10 ){\makebox( 100, 80)[c]{operation} }
+  \put( 400 ,  10 ){\makebox( 100, 80)[b]{$\opR$} }
+
+  \put( 500 ,  60 ){\makebox( 100,0)[b]{$\sue$} }
+  \put( 500 ,  50 ){\vector(1,0){100} }
+
+  %\put(- 90 , -10 ){\makebox( 0, 0)[tl]{$\vu\eqd\su$} }
+  %\put( 110 , -10 ){\makebox( 0, 0)[tl]{$\fs(t;\vu)=\opT\vu$} }
+  %\put( 310 , -10 ){\makebox( 0, 0)[tl]{$\fr(t;\vu)=\opC\opT\vu$} }
+  %\put( 510 , -10 ){\makebox( 0, 0)[tl]{$\sue=\opR\opC\opT\vu$} }
+
+\end{picture}
+\end{fsL}
+\end{center}
+\caption{
+   Additive noise system model
+   %\label{fig:i_addNoise_model}
+   }
+\end{figure}
+
+How much information can be reliably sent through the channel?
+The answer depends on the \hie{channel capacity}\ifsxref{info}{def:iC}
+$\iC$.
+As proven by the \hie{Noisy Channel Coding Theorem} (NCCT)\ifxref{info}{thm:ncct},
+each transmitted symbol can carry up to $\iC$ bits for any arbitrarily
+small probability of error greater than zero.
+The price for decreasing error is increasing the block code size.
+
+Note that the NCCT does not say at what rate
+(in bits/second) you can send data through the AWGN channel.
+The AWGN channel knows nothing of time (and is therefore not a
+realistic channel).
+The NCCT channel merely gives a \hie{coding rate}.
+That is, the number of information bits each symbol can carry.
+Channels that limit the rate (in bits/second) that can be sent through
+it are obviously aware of time and are often referred to as
+\hie{bandlimited channels}.
+
+%--------------------------------------
+\begin{theorem}
+%--------------------------------------
+Let $Z\sim\pN{0}{\sigma^2}$. Then
+\thmbox{  \iH(Z) = \frac{1}{2}\log_2 2\pi e \sigma^2  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+  \iH(Z)
+    &= \pEz \log \frac{1}{\pp(Z)}
+  \\&= -\pEz \log \pp(z)
+  \\&= -\pEz
+         \log \left[\frac{1}{\sqrt{2\pi\sigma^2}}e^{\frac{-z^2}{2\sigma^2}} \right]
+  \\&= -\pEz \left[
+        -\frac{1}{2}\log(2\pi\sigma^2)
+        + \frac{-z^2}{2\sigma^2} \log e
+        \right]
+  \\&= \frac{1}{2} \pEz \left[
+        \log(2\pi\sigma^2)
+        + \frac{\log e}{\sigma^2}z^2
+        \right]
+  \\&= \frac{1}{2} \left[
+        \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}\pEz z^2
+        \right]
+  \\&= \frac{1}{2} \left[
+        \log(2\pi\sigma^2) + \frac{\log e}{\sigma^2}(\sigma^2+0)
+        \right]
+  \\&= \frac{1}{2} \left[
+        \log(2\pi\sigma^2) + \log e
+        \right]
+  \\&= \frac{1}{2} \log(2\pi e\sigma^2)
+\end{align*}
+\end{proof}
+
+%--------------------------------------
+\begin{theorem}
+%--------------------------------------
+Let $Y=X+Z$ be a Gaussian channel with $\pE X^2=P$ and
+$Z\sim\pN{0}{\sigma^2}$. Then
+\thmbox{
+  \iI(X;Y) \le \frac{1}{2}\log\left( 1 + \frac{P}{\sigma^2}\right) = \iC
+  %\hspace{1cm}\mbox{bits per usage}
+  }
+\end{theorem}
+\begin{proof}
+No proof at this time. \attention
+
+Reference: \cite[page 241]{cover}
+\end{proof}
+
+%---------------------------------------
+\begin{example}
+%---------------------------------------
+
+\begin{enumerate}
+  \item If there is no transmitted energy ($P=0$), then the capacity of
+        the channel to pass information is
+    \begin{align*}
+      \iC
+        &= \frac{1}{2}\log_2\left( 1 + \frac{P}{\sigma^2}\right)
+      \\&= \frac{1}{2}\log_2\left( 1 + \frac{0}{\sigma^2}\right)
+      \\&= 0
+    \end{align*}
+  That is, the symbols cannot carry any information.
+
+  \item If there is finite symbol energy and no noise ($\sigma^2=0$),
+        then the capacity of the channel to pass information is
+    \begin{align*}
+      \iC
+        &= \frac{1}{2}\log_2\left( 1 + \frac{P}{0}\right)
+      \\&= \infty
+    \end{align*}
+  That is, each symbol can carry an infinite amount of information.
+  That is, we can use a modulation scheme with an infinite
+  number of of signaling waveforms (analog modulation)
+  and thus each symbol can be represented by one of an
+  infinite number of waveforms.
+
+  \item If the transmitted energy is ($P=15\sigma^2$),
+        then the capacity of the channel to pass information is
+    \begin{align*}
+      \iC
+        &= \frac{1}{2}\log_2\left( 1 + \frac{15\sigma^2}{\sigma^2}\right)
+      \\&= \frac{1}{2}\log_2\left( 1 + 15\right)
+      \\&= \frac{1}{2} 4
+      \\&= 2
+    \end{align*}
+  This means
+  \begin{align*}
+    2
+      &= \iC
+       >  \rchan
+       \eqd \frac{\mbox{information bits}}{\mbox{symbol}}
+       = \frac{\mbox{information bits}}{\mbox{coded bits}} \times
+         \frac{\mbox{coded bits}}{\mbox{symbol}}
+       = \rcode \rsym
+  \end{align*}
+  This means that if the coding rate is $\rcode=1/4$,
+  then we must use a modulation with $256$ ($\rsym=8$ bits/symbol)
+  or fewer waveforms.
+
+  Conversely, if the modulation scheme uses $4$ waveforms, then
+  $\rsym=2$ bits/symbol and so the code rate $\rcode$ can be
+  up to $1$ (almost no coding redundancy is needed).
+
+
+  \item If there is the transmitted energy ($P=\sigma^2$),
+        then the capacity of the channel to pass information is
+    \begin{align*}
+      \iC
+        &= \frac{1}{2}\log_2\left( 1 + \frac{\sigma^2}{\sigma^2}\right)
+      \\&= \frac{1}{2}\log_2\left( 1 + 1\right)
+      \\&= \frac{1}{2}
+    \end{align*}
+  That is, each symbol can carry just under $1/2$ bits of information.
+  This means
+  \begin{align*}
+    \frac{1}{2}
+      &= \iC
+       >  \rchan
+       \eqd \frac{\mbox{information bits}}{\mbox{symbol}}
+       = \frac{\mbox{information bits}}{\mbox{coded bits}} \times
+         \frac{\mbox{coded bits}}{\mbox{symbol}}
+       = \rcode \rsym
+  \end{align*}
+  This means that if the coding rate is $\rcode=1/4$,
+  then we must use a modulation with $4$ ($\rsym=2$ bits/symbol)
+  or fewer waveforms.
+
+  Conversely, if the modulation scheme uses $16$ waveforms, then
+  $\rsym=4$ bits/symbol and so the code rate $\rcode$ must be
+  less than $1/8$.
+\end{enumerate}
+\end{example}
+
+
+
 
 %=======================================
 \section{Specific channels}
