--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1134,7 +1134,8 @@
 \newcommand{\FX}    [0]{{\ft{X}}}
 \newcommand{\FY}    [0]{{\ft{Y}}}
 
-\newcommand{\sym}   [0]{\mathup{\lambda}}
+%\newcommand{\sym}   [0]{\mathup{\lambda}}
+\newcommand{\sym}   [0]{{\lambda}}
 \newcommand{\symf}  [0]{\ft{\lambda}}
 \newcommand{\kdelta}[0]{\bar{\delta}}
 \newcommand{\alphac}{\overline{\alpha}}
