information theory references

--- a/common/coherence.tex
+++ b/common/coherence.tex
@@ -5,6 +5,9 @@
 %============================================================================
 \chapter{Coherence}
 %============================================================================
+%=======================================
+\section{Definitions}
+%=======================================
 %---------------------------------------
 \begin{definition}
 \footnote{
@@ -80,7 +83,7 @@ In particular, note that the following:
 \end{proof}
 
 %=======================================
-\section{Beware of estimators}
+\section{A warning}
 %=======================================
 Estimators yield, as the name implies, estimates.
 These estimates in general contain some error.
